--- a/21DaysFitNess/Base.lproj/Main.storyboard
+++ b/21DaysFitNess/Base.lproj/Main.storyboard
@@ -145,7 +145,7 @@
                                             <constraint firstAttribute="width" constant="327" id="nv6-xl-zeu"/>
                                             <constraint firstAttribute="height" constant="32" id="oEF-fS-3Pc"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="28"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -184,6 +184,95 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9lb-U1-c8Q" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1611.5942028985507" y="1415.625"/>
+        </scene>
+        <!--Review Exercise View Controller-->
+        <scene sceneID="P2O-Vk-Agj">
+            <objects>
+                <viewController storyboardIdentifier="ReviewExerciseViewController" id="kFs-Xe-PzA" customClass="ReviewExerciseViewController" customModule="_1DaysFitNess" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Yrm-s8-UA2">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0fA-A5-WE8">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7h9-Vn-i7n">
+                                        <rect key="frame" x="43.5" y="65" width="327" height="32"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cBu-7D-MBV">
+                                        <rect key="frame" x="87" y="131" width="240" height="206"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="240" id="WhR-r5-M77"/>
+                                            <constraint firstAttribute="height" constant="206" id="wDK-Gf-oci"/>
+                                        </constraints>
+                                    </imageView>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zNZ-Bk-NgX">
+                                        <rect key="frame" x="24" y="488" width="366" height="179"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uBh-1F-deo">
+                                                <rect key="frame" x="23" y="34" width="41.5" height="19.5"/>
+                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vFF-vl-zfp">
+                                                <rect key="frame" x="23" y="80" width="35.5" height="17"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstItem="vFF-vl-zfp" firstAttribute="top" secondItem="zNZ-Bk-NgX" secondAttribute="top" constant="80" id="TR5-2D-RkX"/>
+                                            <constraint firstItem="uBh-1F-deo" firstAttribute="top" secondItem="zNZ-Bk-NgX" secondAttribute="top" constant="34" id="eVG-4v-djw"/>
+                                            <constraint firstAttribute="height" constant="179" id="gW2-1c-b28"/>
+                                            <constraint firstItem="vFF-vl-zfp" firstAttribute="leading" secondItem="zNZ-Bk-NgX" secondAttribute="leading" constant="23" id="nBt-M0-vev"/>
+                                            <constraint firstItem="uBh-1F-deo" firstAttribute="leading" secondItem="zNZ-Bk-NgX" secondAttribute="leading" constant="23" id="pZO-mK-S7g"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" red="0.89411764709999997" green="0.94117647059999998" blue="0.98039215690000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="zNZ-Bk-NgX" firstAttribute="top" secondItem="cBu-7D-MBV" secondAttribute="bottom" constant="151" id="DWX-aQ-tFc"/>
+                                    <constraint firstItem="cBu-7D-MBV" firstAttribute="centerX" secondItem="0fA-A5-WE8" secondAttribute="centerX" id="Mq4-ml-ZsB"/>
+                                    <constraint firstItem="zNZ-Bk-NgX" firstAttribute="leading" secondItem="0fA-A5-WE8" secondAttribute="leading" constant="24" id="RXn-L5-fnc"/>
+                                    <constraint firstItem="cBu-7D-MBV" firstAttribute="top" secondItem="0fA-A5-WE8" secondAttribute="top" constant="131" id="fj8-lS-AlC"/>
+                                    <constraint firstAttribute="trailing" secondItem="zNZ-Bk-NgX" secondAttribute="trailing" constant="24" id="y61-Z8-fqu"/>
+                                </constraints>
+                            </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="back" translatesAutoresizingMaskIntoConstraints="NO" id="xo4-we-wNA">
+                                <rect key="frame" x="0.0" y="44" width="113" height="89"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="9nd-5U-2nJ"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="0fA-A5-WE8" firstAttribute="trailing" secondItem="9nd-5U-2nJ" secondAttribute="trailing" id="PhG-c7-TJz"/>
+                            <constraint firstItem="0fA-A5-WE8" firstAttribute="leading" secondItem="9nd-5U-2nJ" secondAttribute="leading" id="Qtr-tw-VvG"/>
+                            <constraint firstItem="0fA-A5-WE8" firstAttribute="top" secondItem="Yrm-s8-UA2" secondAttribute="top" id="ZdW-IH-CLN"/>
+                            <constraint firstAttribute="bottom" secondItem="0fA-A5-WE8" secondAttribute="bottom" id="vbc-VX-OOI"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="backImageView" destination="xo4-we-wNA" id="c8U-lD-x4s"/>
+                        <outlet property="containerView" destination="0fA-A5-WE8" id="FKo-xR-qD9"/>
+                        <outlet property="exDetailLabel" destination="vFF-vl-zfp" id="4oC-wN-fFU"/>
+                        <outlet property="exImageView" destination="cBu-7D-MBV" id="jmu-AK-LGa"/>
+                        <outlet property="exNameLabel" destination="uBh-1F-deo" id="S4Z-sN-dkz"/>
+                        <outlet property="excerciseImageView" destination="cBu-7D-MBV" id="1u9-R6-2ju"/>
+                        <outlet property="exerciseLabel" destination="7h9-Vn-i7n" id="tfx-aa-j57"/>
+                        <outlet property="subView" destination="zNZ-Bk-NgX" id="kv0-ma-wKB"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cvS-E4-IyH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2326" y="1416"/>
         </scene>
         <!--Timer View Controller-->
         <scene sceneID="Toi-9W-hYW">
