--- a/21DaysFitNess/Base.lproj/Main.storyboard
+++ b/21DaysFitNess/Base.lproj/Main.storyboard
@@ -182,7 +182,9 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="clockInLabel" destination="tx1-L2-Zs7" id="PF1-kP-XTi"/>
                         <outlet property="menuImageView" destination="87q-oH-mxU" id="JOw-gq-0En"/>
+                        <outlet property="myTrainingLabel" destination="pie-PK-jD0" id="Jy4-U6-gqH"/>
                         <outlet property="planImageView" destination="pEt-b2-VSg" id="VQ9-kt-P35"/>
                         <outlet property="settingImageView" destination="k9V-HQ-Qre" id="y3L-1U-fN5"/>
                     </connections>
@@ -522,7 +524,9 @@
                                 <constraints>
                                     <constraint firstItem="aRh-4f-dnC" firstAttribute="top" secondItem="lTO-Aw-3jR" secondAttribute="bottom" constant="50" id="0W4-c9-mh7"/>
                                     <constraint firstAttribute="trailing" secondItem="gyl-P2-nlF" secondAttribute="trailing" constant="73" id="3yQ-s8-TWJ"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="sy2-qg-gP6" secondAttribute="trailing" constant="20" symbolic="YES" id="5xW-Mw-oTX"/>
                                     <constraint firstItem="y86-0m-1C6" firstAttribute="centerX" secondItem="Twm-gz-yp5" secondAttribute="centerX" id="6OM-dI-InH"/>
+                                    <constraint firstItem="gyl-P2-nlF" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="x9o-Io-eMa" secondAttribute="trailing" constant="8" symbolic="YES" id="89j-E0-fw0"/>
                                     <constraint firstItem="sy2-qg-gP6" firstAttribute="top" secondItem="Twm-gz-yp5" secondAttribute="top" constant="522" id="8OD-RL-qhj"/>
                                     <constraint firstItem="x9o-Io-eMa" firstAttribute="centerX" secondItem="NY9-90-SmC" secondAttribute="centerX" id="CXl-XY-wt5"/>
                                     <constraint firstItem="lTO-Aw-3jR" firstAttribute="top" secondItem="Twm-gz-yp5" secondAttribute="top" constant="65" id="Nzs-hb-Agr"/>
@@ -573,6 +577,150 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CYg-E2-TZP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3147.826086956522" y="1415.625"/>
+        </scene>
+        <!--Do Exercise2 View Controller-->
+        <scene sceneID="KEv-lS-YRc">
+            <objects>
+                <viewController storyboardIdentifier="DoExercise2ViewController" id="LuT-S3-iRF" customClass="DoExercise2ViewController" customModule="_1DaysFitNess" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="D8k-nE-RAB">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xev-MB-5ll">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RTz-SP-rRr">
+                                        <rect key="frame" x="172" y="65" width="70" height="33.5"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="28"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Next round" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hf3-lY-4qx">
+                                        <rect key="frame" x="24" y="693" width="81" height="20"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <color key="textColor" red="0.80000000000000004" green="0.20392156859999999" blue="0.33725490200000002" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Rectangle 34" translatesAutoresizingMaskIntoConstraints="NO" id="vFA-Zb-p86">
+                                        <rect key="frame" x="32" y="736" width="350" height="60"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="350" id="MFM-HX-HrW"/>
+                                            <constraint firstAttribute="height" constant="60" id="RrZ-4A-tcv"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gfn-1H-sht">
+                                        <rect key="frame" x="42" y="744.5" width="65" height="43"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="43" id="iGM-mp-DAZ"/>
+                                            <constraint firstAttribute="width" constant="65" id="pOl-Zd-Gpr"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bdb-KT-ZDl">
+                                        <rect key="frame" x="127" y="751" width="160" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="7ui-fn-m5S"/>
+                                            <constraint firstAttribute="width" constant="160" id="Uhl-2I-SSK"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3RH-D5-NIY">
+                                        <rect key="frame" x="310" y="759" width="31" height="14"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xFL-bY-w5v">
+                                        <rect key="frame" x="87" y="131" width="240" height="206"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="240" id="9gX-5G-YWp"/>
+                                            <constraint firstAttribute="height" constant="206" id="arQ-K6-hzS"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6pe-Q7-s5Q">
+                                        <rect key="frame" x="24" y="390" width="50" height="32"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="32" id="p0Z-9V-m2Q"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="30s" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y9W-h5-eZ0">
+                                        <rect key="frame" x="24" y="438" width="34" height="24"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rec" translatesAutoresizingMaskIntoConstraints="NO" id="IxW-Hh-xmC">
+                                        <rect key="frame" x="324" y="398" width="80" height="80"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="80" id="XGm-Gx-PQz"/>
+                                            <constraint firstAttribute="height" constant="80" id="gT6-YN-xmh"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.89411764709999997" green="0.94117647059999998" blue="0.98039215690000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="bdb-KT-ZDl" firstAttribute="centerX" secondItem="vFA-Zb-p86" secondAttribute="centerX" id="4Dz-ds-k8n"/>
+                                    <constraint firstItem="xFL-bY-w5v" firstAttribute="top" secondItem="xev-MB-5ll" secondAttribute="top" constant="131" id="5RB-Lb-uw8"/>
+                                    <constraint firstItem="gfn-1H-sht" firstAttribute="leading" secondItem="xev-MB-5ll" secondAttribute="leading" constant="42" id="5jM-cL-HU7"/>
+                                    <constraint firstItem="vFA-Zb-p86" firstAttribute="top" secondItem="hf3-lY-4qx" secondAttribute="bottom" constant="23" id="7rF-Ck-Mgp"/>
+                                    <constraint firstItem="RTz-SP-rRr" firstAttribute="top" secondItem="xev-MB-5ll" secondAttribute="top" constant="65" id="FZr-2b-nie"/>
+                                    <constraint firstItem="bdb-KT-ZDl" firstAttribute="centerY" secondItem="vFA-Zb-p86" secondAttribute="centerY" id="H3z-V7-K4g"/>
+                                    <constraint firstAttribute="trailing" secondItem="IxW-Hh-xmC" secondAttribute="trailing" constant="10" id="MPp-xz-coe"/>
+                                    <constraint firstItem="3RH-D5-NIY" firstAttribute="centerY" secondItem="vFA-Zb-p86" secondAttribute="centerY" id="Np8-gx-rPd"/>
+                                    <constraint firstItem="RTz-SP-rRr" firstAttribute="centerX" secondItem="xev-MB-5ll" secondAttribute="centerX" id="Q2h-1x-HQN"/>
+                                    <constraint firstAttribute="trailing" secondItem="3RH-D5-NIY" secondAttribute="trailing" constant="73" id="Vw3-N4-YDk"/>
+                                    <constraint firstItem="6pe-Q7-s5Q" firstAttribute="top" secondItem="xev-MB-5ll" secondAttribute="top" constant="390" id="YpA-zh-90I"/>
+                                    <constraint firstAttribute="bottom" secondItem="gfn-1H-sht" secondAttribute="bottom" constant="108.5" id="cNf-Ae-B34"/>
+                                    <constraint firstItem="vFA-Zb-p86" firstAttribute="centerX" secondItem="xev-MB-5ll" secondAttribute="centerX" id="ds1-La-shC"/>
+                                    <constraint firstItem="hf3-lY-4qx" firstAttribute="leading" secondItem="xev-MB-5ll" secondAttribute="leading" constant="24" id="hQq-Gp-sai"/>
+                                    <constraint firstAttribute="bottom" secondItem="3RH-D5-NIY" secondAttribute="bottom" constant="123" id="m5J-En-rfk"/>
+                                    <constraint firstItem="xFL-bY-w5v" firstAttribute="centerX" secondItem="xev-MB-5ll" secondAttribute="centerX" id="mPP-GE-iRx"/>
+                                    <constraint firstItem="y9W-h5-eZ0" firstAttribute="top" secondItem="6pe-Q7-s5Q" secondAttribute="bottom" constant="16" id="mxq-kR-6A0"/>
+                                    <constraint firstItem="y9W-h5-eZ0" firstAttribute="leading" secondItem="xev-MB-5ll" secondAttribute="leading" constant="24" id="nnC-uR-UV2"/>
+                                    <constraint firstItem="6pe-Q7-s5Q" firstAttribute="leading" secondItem="xev-MB-5ll" secondAttribute="leading" constant="24" id="pCL-Vd-JRM"/>
+                                    <constraint firstItem="IxW-Hh-xmC" firstAttribute="centerY" secondItem="xev-MB-5ll" secondAttribute="centerY" constant="-10" id="rAw-hL-a9M"/>
+                                    <constraint firstItem="gfn-1H-sht" firstAttribute="centerY" secondItem="vFA-Zb-p86" secondAttribute="centerY" id="rHc-n1-rEa"/>
+                                </constraints>
+                            </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="back" translatesAutoresizingMaskIntoConstraints="NO" id="NEc-tl-1rj">
+                                <rect key="frame" x="0.0" y="44" width="113" height="89"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="113" id="DaI-aF-8Pj"/>
+                                    <constraint firstAttribute="height" constant="89" id="Tdu-gF-5A6"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="lJK-fH-a6Z"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="xev-MB-5ll" firstAttribute="leading" secondItem="lJK-fH-a6Z" secondAttribute="leading" id="186-BO-eSn"/>
+                            <constraint firstItem="xev-MB-5ll" firstAttribute="top" secondItem="D8k-nE-RAB" secondAttribute="top" id="KVZ-bO-Plz"/>
+                            <constraint firstItem="lJK-fH-a6Z" firstAttribute="trailing" secondItem="xev-MB-5ll" secondAttribute="trailing" id="SjI-b6-c3X"/>
+                            <constraint firstAttribute="bottom" secondItem="xev-MB-5ll" secondAttribute="bottom" id="grM-Nr-Jbm"/>
+                            <constraint firstItem="NEc-tl-1rj" firstAttribute="leading" secondItem="D8k-nE-RAB" secondAttribute="leading" id="mYj-d3-SGW"/>
+                            <constraint firstItem="NEc-tl-1rj" firstAttribute="top" secondItem="lJK-fH-a6Z" secondAttribute="top" id="r6y-sc-85l"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="backImageView" destination="NEc-tl-1rj" id="jwF-vJ-oc6"/>
+                        <outlet property="dayLabel" destination="RTz-SP-rRr" id="kIT-fG-Apb"/>
+                        <outlet property="exImageView" destination="xFL-bY-w5v" id="knr-7Z-7JY"/>
+                        <outlet property="exLabel" destination="6pe-Q7-s5Q" id="6pS-au-d1x"/>
+                        <outlet property="nextExLabel" destination="bdb-KT-ZDl" id="ih0-c2-7nN"/>
+                        <outlet property="nextImageView" destination="gfn-1H-sht" id="g8Z-BH-5OS"/>
+                        <outlet property="nextTimeLabel" destination="3RH-D5-NIY" id="VBV-e8-Gjl"/>
+                        <outlet property="planImageView" destination="vFA-Zb-p86" id="K9m-FZ-gz6"/>
+                        <outlet property="runImageView" destination="IxW-Hh-xmC" id="gI0-eT-oWI"/>
+                        <outlet property="timeLabel" destination="y9W-h5-eZ0" id="F1c-VQ-CJ7"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tai-0g-FtN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3901" y="1416"/>
         </scene>
         <!--Timer View Controller-->
         <scene sceneID="Toi-9W-hYW">
